--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -26,97 +26,89 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
 </head>
 
 <body id="page-top" class="index">
 
-    <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" style="border:none" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span><i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="#page-top">JJ</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
+<!-- Navigation -->
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" style="border:none" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span><i class="fa fa-bars"></i>
+            </button>
+            <a class="navbar-brand" href="#page-top">JJ</a>
         </div>
-        <!-- /.container-fluid -->
-    </nav>
 
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <span style="width: 100%;right: 0;font-size: 19px;">Tell us about your favorite jeans!</span>
-                    <form id="text" method="post">
-                        <label class="col-2 col-form-label">What brand are your jeans?</label>
-                        <input class="form-control" type="text" value="Brand" id="brandInput">
-                        <label class="col-2 col-form-label">What size are your jeans?</label>
-                    </form>
-
-                    <form id="file" method="post" enctype="multipart/form-data">
-
-                        <input class="form-control" type="text" value="5" id="sizeInput">
-                        <div class="m-t-10" id="imgBox" style="display: block;margin:auto;max-height:400px;max-width:400px;background: #656CCA;-moz-border-radius: 20px;-webkit-border-radius: 20px;background-position:50% 50%;background-repeat:no-r;border-radius: 100%;height: 350px;width: 100%;">
-                            <img class="img-responsive" src="../static/img/Camera.svg" alt="" style="width: 50%;top: 34%;position: relative;max-width: 200px;max-height: 200px;"><input type="file" upload="file" name="file" value="" class="imgInput" style="opacity: 0;position: relative;height: 80%;top: -30%;width: 100%;">
-                        </div>
-                        <fieldset>
-                            <button class="btn btn-primary" id="upload-file-btn" type="button">Upload</button>
-                        </fieldset>
-                    </form>
-
-                </div>
-            </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="hidden">
+                    <a href="#page-top"></a>
+                </li>
+                <li class="page-scroll">
+                    <a href="#portfolio">Portfolio</a>
+                </li>
+                <li class="page-scroll">
+                    <a href="#about">About</a>
+                </li>
+                <li class="page-scroll">
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
         </div>
-    </header>
-
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
-        <a class="btn btn-primary" href="#page-top">
-            <i class="fa fa-chevron-up"></i>
-        </a>
+        <!-- /.navbar-collapse -->
     </div>
+    <!-- /.container-fluid -->
+</nav>
 
-    <!-- jQuery -->
-    <script src="../static/vendor/jquery/jquery.min.js"></script>
+<!-- Header -->
+<header>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="h1" style="width: 100%;right: 0;">Welcome to the Jean Jeanie, where everything fits!</div>
+                <div class="h3"></br>It appears to be your first time here.</br> To get started, submit your favorite pair of jeans so we can get your perfect fit.</div>
+                <div class="col-lg-1"style="padding:10px;"> </div>
+                    <btn class="btn btn-primary m-t-10" id="imgBox" style="display: block;margin:auto;max-height:200px;max-width:200px;background: #656CCA;background-position:50% 50%;height: 350px;width: 100%;">
+                        <img class="img-responsive" src="../static/img/clothes.svg" alt="" style="width: 50%;top: 26%;position: relative;max-width: 200px;max-height: 200px;">                    </btn>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../static/vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+            </div>
+        </div>
+    </div>
+</header>
 
-    <!-- Theme JavaScript -->
-    <script src="../static/js/freelancer.min.js"></script>
-    <script src="../static/js/app.js"></script>
+<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+<div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
+    <a class="btn btn-primary" href="#page-top">
+        <i class="fa fa-chevron-up"></i>
+    </a>
+</div>
 
-    <script src="../static/js/lib/underscore.js"></script>
-    <script src="../static/js/lib/backbone.js"></script>
+<!-- jQuery -->
+<script src="../static/vendor/jquery/jquery.min.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="../static/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- Plugin JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+<!-- Theme JavaScript -->
+<script src="../static/js/app/app.js"></script>
+
+<script src="../static/js/lib/underscore.js"></script>
+<script src="../static/js/lib/backbone.js"></script>
+<script>var last = window.location.href.substr(window.location.href.lastIndexOf('/') + 1);
+
+$('#imgBox').on('click',function(){window.location.href = window.location.href.replace(last, "upload.html");});
+</script>
 </body>
 
 </html>
