--- a/code/templates/upload.html
+++ b/code/templates/upload.html
@@ -120,8 +120,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
 <!-- Theme JavaScript -->
-<script src="../static/js/freelancer.min.js"></script>
-<script src="../static/js/app.js"></script>
+<script src="../static/js/app/app.js"></script>
 
 <script src="../static/js/lib/underscore.js"></script>
 <script src="../static/js/lib/backbone.js"></script>
