--- a/code/templates/upload.html
+++ b/code/templates/upload.html
@@ -39,30 +39,12 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" style="border:none" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span><i class="fa fa-bars"></i>
-            </button>
+
             <a class="navbar-brand" href="#page-top">JJ</a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#portfolio">Portfolio</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#about">About</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+        <img src="../static/img/Camera.svg" style="height: 25px;top: 13px;position: absolute;right: 224.5px;">
+        <img src="../static/img/ShoppingCart.svg" style="height: 26px;top: 13px;position: absolute;right: 118px;">
+        <img src="../static/img/Profile.svg" style="height: 30px;top: 11px;position: absolute;right: 11px;">
     </div>
     <!-- /.container-fluid -->
 </nav>
@@ -72,7 +54,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <span class="h1"style="width: 100%;right: 0;">Tell us about your favorite jeans!</span>
+                <span class="h1"style="width: 100%;right: 0;">Measure a pair of jeans!</span>
                 <form id="text"  method="post">
                     <div class="form-group">
                     <label class="h3">What brand are your jeans?</label>
@@ -94,7 +76,7 @@
 
                     <fieldset>
 
-                        <button class="btn btn-primary" style="height:50px;width:100px"id="upload-file-btn" type="button">Upload</button>
+                        <button class="btn btn-primary" style="height:50px;width:100px"id="upload-file-btn2" type="button">Upload</button>
                     </fieldset>
                 </form>
 
