--- a/code/templates/firstprofile.html
+++ b/code/templates/firstprofile.html
@@ -29,6 +29,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="../static/css/blueimp-gallery.min.css">
 
 </head>
 
@@ -72,13 +73,34 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="h1" style="width: 100%;right: 0;">Welcome to the Jean Jeanie, where everything fits!</div>
-                <div class="h3"></br>It appears to be your first time here.</br> To get started, submit your favorite pair of jeans so we can get your perfect fit.</div>
-                <div class="col-lg-1"style="padding:10px;"> </div>
-                    <btn class="btn btn-primary m-t-10" id="imgBox" style="display: block;margin:auto;max-height:200px;max-width:200px;background: #656CCA;background-position:50% 50%;height: 350px;width: 100%;">
-                        <img class="img-responsive" src="../static/img/clothes.svg" alt="" style="width: 50%;top: 26%;position: relative;max-width: 200px;max-height: 200px;">                    </btn>
 
 
+                    <span id="size" class="h1"></span>
+            </br>
+                <span id="size2" class="h1"></span>
+                    </br></br></br>
+                    <span class="h3">Here are a few jeans we found that will fit you perfectly:</span>
+
+
+
+            </div>
+        </div>
+        <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
+            <div class="slides"></div>
+            <h3 class="title"></h3>
+            <a class="prev">‹</a>
+            <a class="next">›</a>
+            <a class="play-pause"></a>
+            <ol class="indicator"></ol>
+        </div>
+    </br></br></br>
+        <div>
+            <span class="h3">If you have a particular brand in mind, try searching:</span>
+            <div class="input-group">
+                <input class="form-control" style="text-align:center;font-size:25px;border:none;height:50px;background:transparent;box-shadow: inset 0 -1px 0px;" type="text" value="Brand" id="brandInput">
+                <span class="input-group-addon" style="background: transparent;border: none;padding: 0px;margin: 0px;">
+                    <img src="../static/img/loupe.svg" style="height: 35px;background: transparent;padding: 0px;margin: 0px;">
+                </span>
             </div>
         </div>
     </div>
@@ -90,7 +112,15 @@
         <i class="fa fa-chevron-up"></i>
     </a>
 </div>
-
+<div id="links">
+    <a href="../static/img/jeans1.jpg" title="Jean 1">
+</a><a href="../static/img/jeans2.jpg" title="Jean 2">
+</a><a href="../static/img/jeans3.jpg" title="Jean 3">
+</a>
+</div>
+<div class="alert alert-success fade show" role="alert">
+    Your jeans have been successfully submitted!
+</div>
 <!-- jQuery -->
 <script src="../static/vendor/jquery/jquery.min.js"></script>
 
@@ -105,9 +135,34 @@
 
 <script src="../static/js/lib/underscore.js"></script>
 <script src="../static/js/lib/backbone.js"></script>
-<script>var last = window.location.href.substr(window.location.href.lastIndexOf('/') + 1);
+<script>
+    $(document).ready(function(){
+        var h = Math.round(location.href.substring(location.href.indexOf('?w')+3, location.href.lastIndexOf('&')), 2);
+        var w = Math.round(location.href.substring(location.href.indexOf('&h')+3));
+        if(!Number.isNaN(w)&& !Number.isNaN(h)&&w>10&&w<50&&h>10&&h<50){
+            $('#size').text("Your Perfect Size has been calculated:  ");
+            $('#size2').text(h.toString()+ " X " + w.toString())}
+        else
+            $('#size').text("We could not calculate your Perfect Size.  Please try again!");
 
-$('#imgBox').on('click',function(){window.location.href = window.location.href.replace(last, "firstupload.html");});
+
+    });
+</script>
+
+<script src="../static/js/blueimp-gallery.min.js"></script>
+
+<script>
+    $(window).load(function(){
+        $(".alert").alert('show')    });
+    var links = ["http://www.yahoo.com","http://www.amazon.com","http://www.google.com"];
+    var gallery = blueimp.Gallery(
+        document.getElementById('links').getElementsByTagName('a'),
+        {
+            container: '#blueimp-gallery-carousel',
+            carousel: true
+        }
+    );
+    $('#blueimp-gallery-carousel').on('click',function(){window.location=links[gallery.getIndex()]});
 </script>
 </body>
 
