--- a/code/templates/firstupload.html
+++ b/code/templates/firstupload.html
@@ -72,12 +72,31 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="h1" style="width: 100%;right: 0;">Welcome to the Jean Jeanie, where everything fits!</div>
-                <div class="h3"></br>It appears to be your first time here.</br> To get started, submit your favorite pair of jeans so we can get your perfect fit.</div>
-                <div class="col-lg-1"style="padding:10px;"> </div>
-                    <btn class="btn btn-primary m-t-10" id="imgBox" style="display: block;margin:auto;max-height:200px;max-width:200px;background: #656CCA;background-position:50% 50%;height: 350px;width: 100%;">
-                        <img class="img-responsive" src="../static/img/clothes.svg" alt="" style="width: 50%;top: 26%;position: relative;max-width: 200px;max-height: 200px;">                    </btn>
+                <span class="h1"style="width: 100%;right: 0;">Tell us about your favorite jeans!</span>
+                <form id="text"  method="post">
+                    <div class="form-group">
+                    <label class="h3">What brand are your jeans?</label>
+                    <input class="form-control" style="text-align:center;font-size:25px;border:none;height:50px;background:transparent;box-shadow: inset 0 -1px 0px;"type="text" value="Brand" id="brandInput">
+                    </div>
+                    <div class="form-group">
+                    <label class="h3">What size are your jeans?</label>
+                    <input class="form-control" style="text-align:center;font-size:25px;border:none;height:50px;background:transparent;box-shadow: inset 0 -1px 0px;"type="text" value="5" id="sizeInput">
+                    </div>
+                </form>
 
+                <form id="file" method="post" enctype="multipart/form-data">
+
+                    <div class="col-lg-1"style="padding:10px;"> </div>
+
+                    <div class="m-t-10" id="imgBox" style="display: block;margin:auto;max-height:200px;max-width:200px;background: #656CCA;-moz-border-radius: 20px;-webkit-border-radius: 20px;background-position:50% 50%;background-repeat:no-r;border-radius: 100%;height: 350px;width: 100%;">
+                        <img class="img-responsive" src="../static/img/Camera.svg" alt="" style="width: 50%;top: 34%;position: relative;max-width: 200px;max-height: 200px;"><input type="file" upload="file" name="file" value="" class="imgInput" style="opacity: 0;position: relative;height: 80%;top: -30%;width: 100%;">
+                    </div><div class="col-lg-1"style="padding:10px;"> </div>
+
+                    <fieldset>
+
+                        <button class="btn btn-primary" style="height:50px;width:100px"id="upload-file-btn" type="button">Upload</button>
+                    </fieldset>
+                </form>
 
             </div>
         </div>
@@ -105,10 +124,6 @@
 
 <script src="../static/js/lib/underscore.js"></script>
 <script src="../static/js/lib/backbone.js"></script>
-<script>var last = window.location.href.substr(window.location.href.lastIndexOf('/') + 1);
-
-$('#imgBox').on('click',function(){window.location.href = window.location.href.replace(last, "firstupload.html");});
-</script>
 </body>
 
 </html>
