final commit please

--- a/code/templates/persistprofile.html
+++ b/code/templates/persistprofile.html
@@ -41,8 +41,8 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
 
-            <a class="navbar-brand" href="#page-top" style="color: #FFD6AA;font-size: 25px;border-right: 2px solid;">JJ</a>
-        </div>
+<a class="navbar-brand" href="#page-top" style="color: #FFD6AA;font-size: 25px;border-right: 2px solid;">JJ</a>
+                </div>
         <img class="camera" src="../static/img/Camera.svg" style="height: 25px;top: 13px;position: absolute;right: 248.5px;">
         <img class="shop" src="../static/img/ShoppingCart.svg" style="height: 26px;top: 13px;position: absolute;right: 129px;">
         <img class="profile" src="../static/img/Profile.svg" style="height: 30px;top: 11px;position: absolute;right: 11px;">
@@ -55,32 +55,15 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <span class="h1"style="width: 100%;right: 0;">Tell us about your favorite jeans!</span>
-                <form id="text"  method="post">
-                    <div class="form-group"style="margin-bottom:0;">
-                    <label class="h3" style="margin-bottom:0;">What brand are your jeans?</label>
-                    <input class="form-control" style="margin-bottom:0;text-align:center;font-size:25px;border:none;height:50px;background:transparent;box-shadow: inset 0 -1px 0px;"type="text" placeholder="Brand" id="brandInput">
-                    </div>
-                    <div class="form-group"style="margin-bottom:0;">
-                    <label class="h3">What size are your jeans?</label>
-                    <input class="form-control" style="text-align:center;font-size:25px;border:none;height:50px;background:transparent;box-shadow: inset 0 -1px 0px;"type="text" placeholder="5" id="sizeInput">
-                    </div>
-                </form>
-
-                <form id="file" method="post" enctype="multipart/form-data">
-
-                    <div class="col-lg-1"style="padding:10px;"> </div>
-
-                    <div class="m-t-10" id="imgBox" style="display: block;margin:auto;max-height:150px;max-width:150px;background: #6D92A0;-moz-border-radius: 20px;-webkit-border-radius: 20px;background-position:50% 50%;background-repeat:no-r;border-radius: 100%;height: 150px;width: 100%;">
-                        <img class="img-responsive" src="../static/img/Camera.svg" alt="" style="width: 50%;top: 34%;position: relative;max-width: 200px;max-height: 200px;"><input type="file" upload="file" name="file" value="" class="imgInput" style="opacity: 0;position: relative;height: 80%;top: -30%;width: 100%;">
-                    </div><div class="col-lg-1"style="padding:10px;"> </div>
-
-                    <fieldset>
-
-                        <button class="btn btn-primary" style="height:50px;width:100px"id="upload-file-btn" type="button">Upload</button>
-                    </fieldset>
-                </form>
-
+                <span class="h1"style="width: 100%;right: 0;">Welcome, Kyle!</span>
+                </br></br></br></br>
+                <span class="h3">You currently have</span>
+                </br>
+                <span style="font-size:50px">50</span>
+                </br>
+                <span class="h3" style="margin-top:3px">points!</span>
+                </br></br></br></br>
+                <div class="btn btn-primary">Invite a friend!</div>
             </div>
         </div>
     </div>
