--- a/code/templates/store.html
+++ b/code/templates/store.html
@@ -34,36 +34,19 @@
 </head>
 
 <body id="page-top" class="index">
+<div id="wrapper">
 
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" style="border:none" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span><i class="fa fa-bars"></i>
-            </button>
-            <a class="navbar-brand" href="#page-top">JJ</a>
-        </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#portfolio">Portfolio</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#about">About</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
+            <a class="navbar-brand" href="#page-top" style="color: #FFD6AA;font-size: 25px;border-right: 2px solid;">JJ</a>
         </div>
-        <!-- /.navbar-collapse -->
+        <img class="camera" src="../static/img/Camera.svg" style="height: 25px;top: 13px;position: absolute;right: 248.5px;">
+        <img class="shop" src="../static/img/ShoppingCart.svg" style="height: 26px;top: 13px;position: absolute;right: 129px;">
+        <img class="profile" src="../static/img/Profile.svg" style="height: 30px;top: 11px;position: absolute;right: 11px;">
     </div>
     <!-- /.container-fluid -->
 </nav>
@@ -76,27 +59,66 @@
 
                 <div>
                     <div class="input-group">
-                        <input class="form-control" style="text-align:center;font-size:25px;border:none;height:50px;background:transparent;box-shadow: inset 0 -1px 0px;" type="text" value="Brand" id="brandInput">
+                        <input class="form-control" style="text-align:center;font-size:25px;border:none;height:50px;background:transparent;box-shadow: inset 0 -1px 0px;" type="text" placeholder="Search for a brand..." id="brandInput">
                         <span class="input-group-addon" style="background: transparent;border: none;padding: 0px;margin: 0px;">
-                    <img src="../static/img/loupe.svg" style="height: 35px;background: transparent;padding: 0px;margin: 0px;">
+                    <img  src="../static/img/loupe.svg" style="height: 35px;background: transparent;padding: 0px;margin: 0px;">
                 </span>
                     </div>
                 </div>
                 <span id="size" class="h1"></span>
                 </br>
                 <span id="size2" class="h1"></span>
-                </br></br></br>
-                </br></br></br>
-                </br></br></br>
-                </br></br></br>
+                <div class="ccc" style="display:none">
+                    <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
+                        <a href="http://www.levi.com/US/en_US/mens-jeans/p/045114406"></a>
+                        <img src="../static/img/levi1.jpg" style="height:100px;box-shadow: 3px 3px 6px black;">
+                    </div>
 
+                    <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
+                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/125010229"></a>
+
+                        <img src="../static/img/levi2.jpeg"style="height:100px;box-shadow: 3px 3px 6px black;">
+                    </div>
+
+                    <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
+                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002"></a>
+
+                        <img src="../static/img/levi4.jpg"style="height:100px;box-shadow: 3px 3px 6px black;">
+                    </div>
+                    <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
+                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002"></a>
+                        <img src="../static/img/levi3.jpeg" style="height:100px;box-shadow: 3px 3px 6px black;">
+                    </div>
+                    <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
+                        <a href="http://www.levi.com/US/en_US/mens-jeans/p/045114406"></a>
+                        <img src="../static/img/levi1.jpg" style="height:100px;box-shadow: 3px 3px 6px black;">
+                    </div>
+
+
+                    <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
+                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002"></a>
+                        <img src="../static/img/levi2.jpeg" style="height:100px;box-shadow: 3px 3px 6px black;">
+                    </div>
+                    <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
+                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/125010229"></a>
+
+                        <img src="../static/img/levi2.jpeg"style="height:100px;box-shadow: 3px 3px 6px black;">
+                    </div>
+
+                    <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
+                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002"></a>
+
+                        <img src="../static/img/levi4.jpg"style="height:100px;box-shadow: 3px 3px 6px black;">
+                    </div>
 
 
 
             </div>
         </div>
-        <div class="recommended">
-            <span class="h3">Recommended for you</span>
+            <div style="padding:120px"></div>
+
+            <div class="recommended">
+            <span class="h3">Jeans that fit you</span>
         <div id="blueimp-gallery-carousel" class="blueimp-gallery blueimp-gallery-carousel">
             <div class="slides"></div>
             <h3 class="title"></h3>
@@ -142,11 +164,15 @@
 
 <script>
     var leviLinks = ["http://www.levi.com/US/en_US/mens-jeans/p/045114406","http://www.levi.com/US/en_US/womens-jeans/p/125010229","http://www.levi.com/US/en_US/mens-jeans/p/005010638","http://www.levi.com/US/en_US/womens-jeans/p/188840002"];
-    $( '.brandInput' ).bind('keypress', function(e){
-        if ( e.keyCode == 13 ) {
-
-            $('.recommended').remove();
+    $( '#brandInput' ).on('keydown', function(e){
+        if ( e.keyCode == 13 || e.keyCode==83) {
+            $('.ccc').fadeIn();
+            $('.recommended').fadeOut();
         }
+    });$( '.input-group-addon' ).on('click', function(e){
+            $('.ccc').fadeIn();
+            $('.recommended').fadeOut();
+
     });
     $(window).load(function(){
         $(".alert").alert('show')    });
@@ -159,6 +185,13 @@
     );
     $('#blueimp-gallery-carousel').on('click',function(){window.location=links[gallery.getIndex()]});
 </script>
-</body>
+<script>
+    var last = window.location.href.substr(window.location.href.lastIndexOf('/') + 1);
+$(document).ready(function(){$('#wrapper').fadeIn();});
+    $('.camera').on('click',function(){window.location.href = window.location.href.replace(last, "upload.html");});
+    $('.shop').on('click',function(){window.location.href = window.location.href.replace(last, "store.html");});
+    $('.profile').on('click',function(){window.location.href = window.location.href.replace(last, "persistprofile.html");});
+</script>
+</div></body>
 
 </html>
