--- a/code/static/css/app.css
+++ b/code/static/css/app.css
@@ -1,3 +1,5 @@
 html,header,body{height:100%;width:100%;}
+#wrapper{height:100%;width:100%;}
 .container{height:100%;width:100%;}
 header .container{padding-top:50px;padding-bottom:0;}
+.ccc{display:inline-block;}
