--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -33,36 +33,19 @@
 </head>
 
 <body id="page-top" class="index">
+<div id="wrapper">
 
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" style="border:none" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span><i class="fa fa-bars"></i>
-            </button>
-            <a class="navbar-brand" href="#page-top">JJ</a>
-        </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#portfolio">Portfolio</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#about">About</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
+            <a class="navbar-brand" href="#page-top" style="color: #FFD6AA;font-size: 25px;border-right: 2px solid;">JJ</a>
         </div>
-        <!-- /.navbar-collapse -->
+        <img class="camera" src="../static/img/Camera.svg" style="height: 25px;top: 13px;position: absolute;right: 248.5px;">
+        <img class="shop" src="../static/img/ShoppingCart.svg" style="height: 26px;top: 13px;position: absolute;right: 129px;">
+        <img class="profile" src="../static/img/Profile.svg" style="height: 30px;top: 11px;position: absolute;right: 11px;">
     </div>
     <!-- /.container-fluid -->
 </nav>
@@ -72,13 +55,11 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="h1" style="width: 100%;right: 0;">Welcome to the Jean Jeanie, where everything fits!</div>
-                <div class="h3"></br>It appears to be your first time here.</br> To get started, submit your favorite pair of jeans so we can get your perfect fit.</div>
+                <div class="h1" style="font-size:27px;width: 100%;right: 0;">Welcome to the Jean Jeanie, where everything fits!</div>
+                <div class="h3" style="font-size:20px;margin:0;"></br>It appears to be your first time here.</br> To get started, submit your favorite pair of jeans so we can get your perfect fit.</div>
                 <div class="col-lg-1"style="padding:10px;"> </div>
-                    <btn class="btn btn-primary m-t-10" id="imgBox" style="display: block;margin:auto;max-height:200px;max-width:200px;background: #656CCA;background-position:50% 50%;height: 350px;width: 100%;">
+                    <btn class="btn btn-primary m-t-10" id="imgBox" style="display: block;border:none;margin:auto;max-height:150px;max-width:150px;background: #6D92A0;background-position:50% 50%;height: 350px;width: 100%;">
                         <img class="img-responsive" src="../static/img/clothes.svg" alt="" style="width: 50%;top: 26%;position: relative;max-width: 200px;max-height: 200px;">                    </btn>
-
-
             </div>
         </div>
     </div>
@@ -109,6 +90,13 @@
 
 $('#imgBox').on('click',function(){window.location.href = window.location.href.replace(last, "firstupload.html");});
 </script>
-</body>
+<script>
+    var last = window.location.href.substr(window.location.href.lastIndexOf('/') + 1);
+$(document).ready(function(){$('#wrapper').fadeIn();});
+    $('.camera').on('click',function(){window.location.href = window.location.href.replace(last, "upload.html");});
+    $('.shop').on('click',function(){window.location.href = window.location.href.replace(last, "store.html");});
+    $('.profile').on('click',function(){window.location.href = window.location.href.replace(last, "persistprofile.html");});
+</script>
+</div></body>
 
 </html>
