--- a/code/templates/profile.html
+++ b/code/templates/profile.html
@@ -34,36 +34,19 @@
 </head>
 
 <body id="page-top" class="index">
+<div id="wrapper">
 
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" style="border:none" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span><i class="fa fa-bars"></i>
-            </button>
-            <a class="navbar-brand" href="#page-top">JJ</a>
-        </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="hidden">
-                    <a href="#page-top"></a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#portfolio">Portfolio</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#about">About</a>
-                </li>
-                <li class="page-scroll">
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
+            <a class="navbar-brand" href="#page-top" style="color: #FFD6AA;font-size: 25px;border-right: 2px solid;">JJ</a>
         </div>
-        <!-- /.navbar-collapse -->
+        <img class="camera" src="../static/img/Camera.svg" style="height: 25px;top: 13px;position: absolute;right: 248.5px;">
+        <img class="shop" src="../static/img/ShoppingCart.svg" style="height: 26px;top: 13px;position: absolute;right: 129px;">
+        <img class="profile" src="../static/img/Profile.svg" style="height: 30px;top: 11px;position: absolute;right: 11px;">
     </div>
     <!-- /.container-fluid -->
 </nav>
@@ -75,11 +58,11 @@
             <div class="col-lg-12">
 
 
-                    <span id="size" class="h1"></span>
-            </br>
+                <span id="size" class="h3"></span>
+                </br>
                 <span id="size2" class="h1"></span>
-                    </br></br></br>
-                    <span class="h3">Here are a few jeans we found that will fit you perfectly:</span>
+                </br>
+                <span class="h3">Here are a few jeans we found that will fit you perfectly:</span>
 
 
 
@@ -93,11 +76,10 @@
             <a class="play-pause"></a>
             <ol class="indicator"></ol>
         </div>
-    </br></br></br>
         <div>
             <span class="h3">If you have a particular brand in mind, try searching:</span>
             <div class="input-group">
-                <input class="form-control" style="text-align:center;font-size:25px;border:none;height:50px;background:transparent;box-shadow: inset 0 -1px 0px;" type="text" value="Brand" id="brandInput">
+                <input class="form-control" style="text-align:center;font-size:25px;border:none;height:50px;background:transparent;box-shadow: inset 0 -1px 0px;" type="text" placeholder="Search for a brand..." id="brandInput">
                 <span class="input-group-addon" style="background: transparent;border: none;padding: 0px;margin: 0px;">
                     <img src="../static/img/loupe.svg" style="height: 35px;background: transparent;padding: 0px;margin: 0px;">
                 </span>
@@ -114,7 +96,7 @@
 </div>
 <div id="links">
     <a href="../static/img/jeans1.jpg" title="Jean 1">
-</a><a href="../static/img/jeans2.jpg" title="Jean 2">
+    </a><a href="../static/img/jeans2.jpg" title="Jean 2">
 </a><a href="../static/img/jeans3.jpg" title="Jean 3">
 </a>
 </div>
@@ -140,10 +122,10 @@
         var h = Math.round(location.href.substring(location.href.indexOf('?w')+3, location.href.lastIndexOf('&')), 2);
         var w = Math.round(location.href.substring(location.href.indexOf('&h')+3));
         if(!Number.isNaN(w)&& !Number.isNaN(h)&&w>10&&w<50&&h>10&&h<50){
-            $('#size').text("Jeans have been calculated: ");
+            $('#size').text("Jeans have a size of:");
             $('#size2').text(h.toString()+ " X " + w.toString())}
         else
-            $('#size').text("We could not calculate jean size.  Please try again!");
+            $('#size').text("We could not calculate the jeans.  Please try again!");
 
 
     });
@@ -154,7 +136,7 @@
 <script>
     $(window).load(function(){
         $(".alert").alert('show')    });
-    var links = ["https://www.amazon.com/Mavi-Womens-Alexa-Nolita-Skinny/dp/B00XMZ8OIU","https://www.amazon.com/Levis-Womens-515-Bootcut-Jean/dp/B0018P397W","https://www.amazon.com/Silver-Jeans-Mens-Gordie-Straight/dp/B00K6F64UE"];
+    var links = ["http://www.yahoo.com","http://www.amazon.com","http://www.google.com"];
     var gallery = blueimp.Gallery(
         document.getElementById('links').getElementsByTagName('a'),
         {
@@ -164,6 +146,15 @@
     );
     $('#blueimp-gallery-carousel').on('click',function(){window.location=links[gallery.getIndex()]});
 </script>
-</body>
+<script>
+    var last = window.location.href.substr(window.location.href.lastIndexOf('/') + 1);
+$(document).ready(function(){$('#wrapper').fadeIn();});
+    $('.input-group-addon').on('click',function(){window.location.href = window.location.href.replace(last, "store.html");});
+
+    $('.camera').on('click',function(){window.location.href = window.location.href.replace(last, "upload.html");});
+    $('.shop').on('click',function(){window.location.href = window.location.href.replace(last, "store.html");});
+    $('.profile').on('click',function(){window.location.href = window.location.href.replace(last, "persistprofile.html");});
+</script>
+</div></body>
 
 </html>
