images work and profile changing

--- a/code/templates/store.html
+++ b/code/templates/store.html
@@ -69,48 +69,58 @@
                 </br>
                 <span id="size2" class="h1"></span>
                 <div class="ccc" style="display:none">
-                    <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
-                        <a href="http://www.levi.com/US/en_US/mens-jeans/p/045114406"></a>
-                        <img src="../static/img/levi1.jpg" style="height:100px;box-shadow: 3px 3px 6px black;">
-                    </div>
+                    <a href="http://www.levi.com/US/en_US/mens-jeans/p/045114406">
 
                     <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
-                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/125010229"></a>
+                        <img src="../static/img/levi1.jpg" style="height:100px;box-shadow: 3px 3px 6px black;">
+                    </div>
+                    </a>
+                    <a href="http://www.levi.com/US/en_US/womens-jeans/p/125010229">
+
+                    <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
 
                         <img src="../static/img/levi2.jpeg"style="height:100px;box-shadow: 3px 3px 6px black;">
                     </div>
+                    </a>
+                    <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002">
 
                     <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
-                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002"></a>
+
 
                         <img src="../static/img/levi4.jpg"style="height:100px;box-shadow: 3px 3px 6px black;">
                     </div>
+                    </a>
+                    <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002">
+
                     <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
-                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002"></a>
                         <img src="../static/img/levi3.jpeg" style="height:100px;box-shadow: 3px 3px 6px black;">
                     </div>
+                    </a>
+                    <a href="http://www.levi.com/US/en_US/mens-jeans/p/045114406">
+
                     <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
-                        <a href="http://www.levi.com/US/en_US/mens-jeans/p/045114406"></a>
                         <img src="../static/img/levi1.jpg" style="height:100px;box-shadow: 3px 3px 6px black;">
-                    </div>
+                    </div></a>
 
+                    <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002">
 
                     <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
-                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002"></a>
                         <img src="../static/img/levi2.jpeg" style="height:100px;box-shadow: 3px 3px 6px black;">
                     </div>
+                    </a>
+                    <a href="http://www.levi.com/US/en_US/womens-jeans/p/125010229">
+
                     <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
-                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/125010229"></a>
 
                         <img src="../static/img/levi2.jpeg"style="height:100px;box-shadow: 3px 3px 6px black;">
-                    </div>
+                    </div></a>
+                    <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002">
 
                     <div style="float: left; width: 49%; margin-right: 1%; margin-bottom: 0.5em;">
-                        <a href="http://www.levi.com/US/en_US/womens-jeans/p/188840002"></a>
 
                         <img src="../static/img/levi4.jpg"style="height:100px;box-shadow: 3px 3px 6px black;">
                     </div>
-
+                    </a>
 
 
             </div>
