--- a/code/templates/persistprofile.html
+++ b/code/templates/persistprofile.html
@@ -59,7 +59,7 @@
                 </br></br></br></br>
                 <span class="h3">You currently have</span>
                 </br>
-                <span style="font-size:50px">50</span>
+                <span class="points" style="font-size:50px"></span>
                 </br>
                 <span class="h3" style="margin-top:3px">points!</span>
                 </br></br></br></br>
@@ -93,6 +93,7 @@
 <script>
     var last = window.location.href.substr(window.location.href.lastIndexOf('/') + 1);
 $(document).ready(function(){$('#wrapper').fadeIn();});
+$('.points').text(Math.round(Math.random()*10000));
     $('.camera').on('click',function(){window.location.href = window.location.href.replace(last, "upload.html");});
     $('.shop').on('click',function(){window.location.href = window.location.href.replace(last, "store.html");});
     $('.profile').on('click',function(){window.location.href = window.location.href.replace(last, "persistprofile.html");});
