--- a/code/templates/profile.html
+++ b/code/templates/profile.html
@@ -62,8 +62,7 @@
                 </br>
                 <span id="size2" class="h1"></span>
                 </br>
-                <span class="h3">Here are a few jeans we found that will fit you perfectly:</span>
-
+                <a style="color:#93d2ea; font-size:14px;text-decoration:underline"href="upload.html"><span>Try another pair?</span></a>
 
 
             </div>
@@ -76,15 +75,6 @@
             <a class="play-pause"></a>
             <ol class="indicator"></ol>
         </div>
-        <div>
-            <span class="h3">If you have a particular brand in mind, try searching:</span>
-            <div class="input-group">
-                <input class="form-control" style="text-align:center;font-size:25px;border:none;height:50px;background:transparent;box-shadow: inset 0 -1px 0px;" type="text" placeholder="Search for a brand..." id="brandInput">
-                <span class="input-group-addon" style="background: transparent;border: none;padding: 0px;margin: 0px;">
-                    <img src="../static/img/loupe.svg" style="height: 35px;background: transparent;padding: 0px;margin: 0px;">
-                </span>
-            </div>
-        </div>
     </div>
 </header>
 
@@ -94,12 +84,7 @@
         <i class="fa fa-chevron-up"></i>
     </a>
 </div>
-<div id="links">
-    <a href="../static/img/jeans1.jpg" title="Jean 1">
-    </a><a href="../static/img/jeans2.jpg" title="Jean 2">
-</a><a href="../static/img/jeans3.jpg" title="Jean 3">
-</a>
-</div>
+
 <div class="alert alert-success fade show" role="alert">
     Your jeans have been successfully submitted!
 </div>
@@ -131,21 +116,7 @@
     });
 </script>
 
-<script src="../static/js/blueimp-gallery.min.js"></script>
 
-<script>
-    $(window).load(function(){
-        $(".alert").alert('show')    });
-    var links = ["http://www.yahoo.com","http://www.amazon.com","http://www.google.com"];
-    var gallery = blueimp.Gallery(
-        document.getElementById('links').getElementsByTagName('a'),
-        {
-            container: '#blueimp-gallery-carousel',
-            carousel: true
-        }
-    );
-    $('#blueimp-gallery-carousel').on('click',function(){window.location=links[gallery.getIndex()]});
-</script>
 <script>
     var last = window.location.href.substr(window.location.href.lastIndexOf('/') + 1);
 $(document).ready(function(){$('#wrapper').fadeIn();});
