fixed profile and first profile

--- a/code/templates/upload.html
+++ b/code/templates/upload.html
@@ -75,7 +75,7 @@
 
                     <fieldset>
 
-                        <button class="btn btn-primary" style="height:50px;width:100px"id="upload-file-btn" type="button">Upload</button>
+                        <button class="btn btn-primary" style="height:50px;width:100px"id="upload-file-btn2" type="button">Upload</button>
                     </fieldset>
                 </form>
 
