--- a/code/templates/firstprofile.html
+++ b/code/templates/firstprofile.html
@@ -136,7 +136,7 @@
 <script>
     $(window).load(function(){
         $(".alert").alert('show')    });
-    var links = ["http://www.yahoo.com","http://www.amazon.com","http://www.google.com"];
+    var links = ["https://www.amazon.com/Mavi-Womens-Alexa-Nolita-Skinny/dp/B00XMZ8OIU","https://www.amazon.com/Levis-Womens-515-Bootcut-Jean/dp/B0018P397W","https://www.amazon.com/Silver-Jeans-Mens-Gordie-Straight/dp/B00K6F64UE"];
     var gallery = blueimp.Gallery(
         document.getElementById('links').getElementsByTagName('a'),
         {
