--- a/code/templates/store.html
+++ b/code/templates/store.html
@@ -173,7 +173,7 @@
 <script src="../static/js/blueimp-gallery.min.js"></script>
 
 <script>
-    var leviLinks = ["http://www.levi.com/US/en_US/mens-jeans/p/045114406","http://www.levi.com/US/en_US/womens-jeans/p/125010229","http://www.levi.com/US/en_US/mens-jeans/p/005010638","http://www.levi.com/US/en_US/womens-jeans/p/188840002"];
+    var links = ["https://www.amazon.com/Mavi-Womens-Alexa-Nolita-Skinny/dp/B00XMZ8OIU","https://www.amazon.com/Levis-Womens-515-Bootcut-Jean/dp/B0018P397W","https://www.amazon.com/Silver-Jeans-Mens-Gordie-Straight/dp/B00K6F64UE"];
     $( '#brandInput' ).on('keydown', function(e){
         if ( e.keyCode == 13 || e.keyCode==83) {
             $('.ccc').fadeIn();
